Tidy up new user introduction info. Refactor Collapse pattern into component. Fixes #386

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -108,12 +108,6 @@ h1,h2,h3,h4,h5,h6 {
 
 // Home page
 
-#first-time-user-introduction {
-  padding-top: 1em;
-}
-
-
-
 .accent {
   line-height: 1em;
   overflow: hidden;
@@ -137,9 +131,10 @@ h1,h2,h3,h4,h5,h6 {
   margin-left: 15px;
 }
 
-.expandable-header {
+.expandable-section .expandable-header {
   font-weight: bold;
   cursor: pointer;
+  display: block;
   margin-bottom: 0.5em;
 }
 
